Portal/Content/Site.scss
@import "theme.scss";
@import "scss/_icons.scss";
@import "scss/_fonts.scss";
@import "scss/_overrides.scss";


.descent-app {
    display: block;
    position: absolute;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.header{
    height: 60px;
    position: relative;
    box-shadow: 0px 2px 5px mat-color($primary, 500);
    z-index: 200;
}

.main-container {
    display:block;
    height: calc(100% - 64px);
    margin-top: 76px;
}

.hidden {
    display: none;
    visibility: hidden;
}

.warn-button {
    color: mat-color($warn, 500);
}

.small-font {
    font-size: 0.875rem;
}

.selected-card {
    background-color: mat-color($accent, A200);
    
    @media(max-width: 960px){
        background-color: white;
    }
}


.warning-message {
    color: #ED6F19;
}

.margin {
    margin-top: 15px;
}

.content-margin {
    margin: 8px 0px;
}

.large-content-margin {
    margin: 16px 0px;
}

.content-small-margin {
    margin: 3px 0px;
}

.workflow-log-content{
     margin-left:5px
}

.card-content-container {
    padding: 11px 16px 25px 16px;
}

.gl-line-container {
    padding: 8px 16px;
}

.h2-margin {
    margin-bottom: 6px;;
}

.link-button {
    height: 45px;
    background:none;
    border:none; 
    padding: 10px 0px;
    color:mat-color($accent, 500);
    font-size: 1rem;
    cursor:pointer;
    &.back {
        padding: 0px 14px 0px 0px;
    }
}

.edit-button {
    width: 100%;

    .mat-button-wrapper {
        float: left;
        color: mat-color($accent, 500);
    }

    .span {
        font-size: 1rem;
        padding-left: 4px;
    }
}

.text-centered {
    text-align: center;
}

.spinner-centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.spinner-fixed {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

snack-bar-container.warn-snack-bar {
    background: mat-color($warn, A200);
    border: 1px solid mat-color($warn, A400);
    border-bottom: 0;
    border-radius: 0;
    max-width: 624px;

    @media (max-width: 960px) {
        max-width: 100%;
        border-right: 0;
        border-left: 0;
    }
}

.selectable-card {
    cursor: pointer;
}

.selectable-card:active {
    background-color: mat-color($accent, A400);
}

.modified-value {
    color: #0D78AA !important;
    span {
        color: #0D78AA !important;
    }
}

.no-margin {
    margin: 0 !important;
}

.ellipsed-text {
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.divider {
    box-shadow: 0px 4px 5px #a9b1b5;
}

.character {
    
    >img{
        max-width: 100%;
        max-height: 100%;
    }
}

